--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,86 @@
-asn1crypto==0.24.0
-attrs==19.1.0
-backcall==0.1.0
-bleach==3.1.0
-certifi==2018.10.15
-cffi==1.11.5
-chardet==3.0.4
-cloudpickle==0.8.0
-cryptography==2.3.1
-cycler==0.10.0
-Cython==0.29.6
-dask==1.1.4
-decorator==4.4.0
-defusedxml==0.5.0
-entrypoints==0.3
-graphviz==0.8.4
-h5py==2.8.0
-h5py-cache==1.0
-idna==2.7
-ipykernel==5.1.0
-ipython==7.3.0
-ipython-genutils==0.2.0
-jedi==0.13.3
-Jinja2==2.10
-joblib==0.13.2
-jsonschema==3.0.1
-jupyter-client==5.2.4
-jupyter-core==4.4.0
-jupyterlab==0.35.4
-jupyterlab-server==0.2.0
-kiwisolver==1.0.1
-lmdb==0.94
-MarkupSafe==1.1.1
-matplotlib==3.0.3
-mistune==0.8.4
-mkl-fft==1.0.6
-mkl-random==1.0.1
-nbconvert==5.4.1
-nbformat==4.4.0
-networkx==2.2
-notebook==5.7.6
-numpy==1.15.4
-olefile==0.46
-pandas==0.24.2
-pandocfilters==1.4.2
-parso==0.3.4
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==5.4.1
-prometheus-client==0.6.0
-prompt-toolkit==2.0.9
-protobuf==3.7.0
-ptyprocess==0.6.0
-pycparser==2.19
-Pygments==2.3.1
-pyOpenSSL==18.0.0
-pyparsing==2.3.1
-pyrsistent==0.14.11
-PySocks==1.6.8
-python-dateutil==2.8.0
-pytz==2018.9
-PyWavelets==1.0.2
-pyzmq==17.1.2
-requests==2.20.1
-scikit-image==0.14.2
-scipy==1.1.0
-Send2Trash==1.5.0
-Shapely==1.6.4.post2
-six==1.11.0
-svgpathtools==1.3.3
-svgwrite==1.2.1
-tensorboardX==1.6
-terminado==0.8.1
-testpath==0.4.2
-toolz==0.9.0
-torch==1.0.0
-torchfile==0.1.0
-torchnet==0.0.4
-torchvision==0.2.1
-tornado==5.1.1
-tqdm==4.31.1
-traitlets==4.3.2
-urllib3==1.24.1
-visdom==0.1.8.5
-wcwidth==0.1.7
-webencodings==0.5.1
-websocket-client==0.54.0
+asttokens==2.4.1
+blinker==1.4
+contourpy==1.2.1
+cryptography==3.4.8
+cycler==0.12.1
+dbus-python==1.2.18
+decorator==5.1.1
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+exceptiongroup==1.2.0
+executing==2.0.1
+filelock==3.13.3
+fonttools==4.51.0
+fsspec==2024.3.1
+httplib2==0.20.2
+imageio==2.34.0
+importlib-metadata==4.6.4
+ipynb-py-convert==0.4.6
+ipython==8.23.0
+jedi==0.19.1
+jeepney==0.7.1
+Jinja2==3.1.3
+keyring==23.5.0
+kiwisolver==1.4.5
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy_loader==0.4
+lmdb==1.4.1
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.6
+more-itertools==8.10.0
+mpmath==1.3.0
+netifaces==0.11.0
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.0
+opencv-python==4.9.0.80
+packaging==24.0
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.3.0
+prompt-toolkit==3.0.43
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.4.0+ubuntu2
+python-dateutil==2.9.0.post0
+PyYAML==5.4.1
+scikit-image==0.22.0
+scipy==1.13.0
+SecretStorage==3.3.1
+shapely==2.0.3
+six==1.16.0
+stack-data==0.6.3
+svgpathtools==1.6.1
+svgwrite==1.4.3
+sympy==1.12
+systemd-python==234
+tifffile==2024.2.12
+torch==2.2.2
+traitlets==5.14.2
+triton==2.2.0
+typing_extensions==4.11.0
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+wadllib==1.3.6
+wcwidth==0.2.13
+zipp==1.0.0
