--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,66 @@
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asttokens==2.4.1
-blinker==1.4
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.14.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+comm==0.2.2
 contourpy==1.2.1
-cryptography==3.4.8
 cycler==0.12.1
-dbus-python==1.2.18
+debugpy==1.8.1
 decorator==5.1.1
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
+defusedxml==0.7.1
 exceptiongroup==1.2.0
 executing==2.0.1
-filelock==3.13.3
+fastjsonschema==2.19.1
+filelock==3.13.4
 fonttools==4.51.0
+fqdn==1.5.1
 fsspec==2024.3.1
-httplib2==0.20.2
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
 imageio==2.34.0
-importlib-metadata==4.6.4
-ipynb-py-convert==0.4.6
+ipykernel==6.29.4
 ipython==8.23.0
+isoduration==20.11.0
 jedi==0.19.1
-jeepney==0.7.1
 Jinja2==3.1.3
-keyring==23.5.0
+json5==0.9.24
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyter_server==2.13.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.26.0
 kiwisolver==1.4.5
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
 lazy_loader==0.4
 lmdb==1.4.1
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.6
-more-itertools==8.10.0
+mistune==3.0.2
 mpmath==1.3.0
-netifaces==0.11.0
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.3
+notebook_shim==0.2.4
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -47,40 +74,55 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.0
 opencv-python==4.9.0.80
+overrides==7.7.0
 packaging==24.0
+pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.3.0
+platformdirs==4.2.0
+prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycparser==2.22
 Pygments==2.17.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu2
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-PyYAML==5.4.1
+python-json-logger==2.0.7
+PyYAML==6.0.1
+pyzmq==25.1.2
+referencing==0.34.0
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.18.0
 scikit-image==0.22.0
 scipy==1.13.0
-SecretStorage==3.3.1
+Send2Trash==1.8.3
 shapely==2.0.3
 six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
 stack-data==0.6.3
 svgpathtools==1.6.1
 svgwrite==1.4.3
 sympy==1.12
-systemd-python==234
+terminado==0.18.1
 tifffile==2024.2.12
+tinycss2==1.2.1
+tomli==2.0.1
 torch==2.2.2
+tornado==6.4
 traitlets==5.14.2
 triton==2.2.0
+types-python-dateutil==2.9.0.20240316
 typing_extensions==4.11.0
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-wadllib==1.3.6
+uri-template==1.3.0
+urllib3==2.2.1
 wcwidth==0.2.13
-zipp==1.0.0
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
